--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+.fade-anim img {
+  animation: fadeAnim 0.7s ease-in-out;
+}
+@keyframes fadeAnim {
+  from {
+    opacity: 0.5;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
