--- a/src/Components/Pages/Banner/Banner.css
+++ b/src/Components/Pages/Banner/Banner.css
@@ -1,7 +1,6 @@
 .banner-section {
   background-image: url("../../Images/banner bg.jpg");
-  height: 80vh;
-
+  height: 95vh;
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -18,4 +17,13 @@
 .banner > img {
   width: 100%;
   height: 100%;
+}
+@media only screen and (max-width: 48em) {
+  .banner {
+    width: 100%;
+    height: 40vh;
+  }
+  .banner-section {
+    height: 70vh;
+  }
 }
