--- a/src/Components/Shared/LogIn/LogIn.css
+++ b/src/Components/Shared/LogIn/LogIn.css
@@ -1,12 +1,16 @@
 .log-in-page {
   width: 100%;
-  height: 100vh;
+  /* min-height: fit-content; */
+  min-height: 100vh;
   background-image: url("../../Images/banner bg.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+  padding-bottom: 70px;
+  padding-top: 70px;
 }
 .log-in-section {
   background-color: rgba(128, 128, 128, 0.185);
   border-radius: 10px;
+  margin-top: 2%;
 }
